--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         tools:targetApi="31">
         <meta-data
             android:name="xposedmodule"
@@ -21,7 +17,7 @@
             android:value="93"/>
         <meta-data
             android:name="xposedscope"
-            android:resource="@array/lsposed_scope" />
+            android:resource="@array/xposedscope" />
     </application>
 
 </manifest>
